package Controller;

public interface IController {

    void nextFrame();
    void startNewGame();
}
