package Model;

public enum FieldState {
    FREE,
    BLACK,
    WHITE
}
