package Model;
public class Piece {

    Piece() {

    }
    void move(){

    }

}
